# wgpu-template

./: .gitignore  Cargo.toml
src/: context.rs  index.html  lib.rs  main.rs  window.rs
src/demo/: debug.rs  debug.wgsl  mod.rs
src/resources/: buffer.rs  camera.rs  fs.rs  mod.rs  texture.rs
