[package]
name = "wgpu-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-fs = "2.1.0"
bytemuck = {version = "1", features = ["derive"]}
env_logger = "0.10.1"
flume = "0.11.0"
glam = { version = "0.25.0", features = ["bytemuck"] }
instant = "0.1.12"
log = "0.4.20"
pollster = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
wgpu = "0.18"
winit = { version = "0.29", features = ["rwh_05"] }
